Acces denied page x other improvements

--- a/Manufacture.WebApp/Components/Pages/CRUD/Users.razor
+++ b/Manufacture.WebApp/Components/Pages/CRUD/Users.razor
@@ -1,12 +1,12 @@
 ﻿@page "/users"
+
 @using Manufacture.Core.Entities.Identity
 @using Manufacture.BusinessLogic.Interfaces
 @inject IUserService UserService; 
 @inject NavigationManager NavigationManager
-
 @rendermode @(new InteractiveServerRenderMode(prerender: false))
 @attribute [StreamRendering]
-
+@attribute [Authorize(Policy = "Permissions10")]
 <PageTitle>Пользователи</PageTitle>
 
 <h1>Пользователи</h1>
@@ -112,67 +112,6 @@ else
 
     </div>
 }
-@* <div class="container"> *@
-@*         <div class="row"> *@
-@*             <div class="col-md-12"> *@
-@*                 <div class="card bg-light rounded shadow-sm p-3"> *@
-@*                     <div class="d-flex justify-content-between mb-3"> *@
-@*                         <button @onclick="CreateUser" class="btn btn-primary btn-sm">Добавить пользователя</button> *@
-@*                     </div> *@
-@*                     <table class="table table-hover align-middle  table-bordered"> *@
-@*                         <caption class="caption-top">Список пользователей</caption> *@
-@*                         <thead> *@
-@*                         <tr> *@
-@*                             <th scope="col">ID</th> *@
-@*                             <th scope="col">Имя пользователя</th> *@
-@*                             <th scope="col">Почта</th> *@
-@*                             <th scope="col">Номер телефона</th> *@
-@*                             <th scope="col">Номер домашнего телефона</th> *@
-@*                             <th scope="col">Имя</th> *@
-@*                             <th scope="col">Отчество</th> *@
-@*                             <th scope="col">Фамилия</th> *@
-@*                             <th scope="col">Пол</th> *@
-@*                             <th scope="col">Адрес</th> *@
-@*                             <th scope="col">Дата рождения</th> *@
-@*                             <th scope="col">Дата создания</th> *@
-@*                             <th scope="col">Создал</th> *@
-@*                             <th scope="col">Дата изменения</th> *@
-@*                             <th scope="col">Изменил</th> *@
-@*                             <th scope="col">Действия</th> *@
-@*                         </tr> *@
-@*                         </thead> *@
-@*                         <tbody> *@
-@*                         @foreach (var user in UsersL) *@
-@*                         { *@
-@*                             <tr> *@
-@*                                 <td>@user.Id</td> *@
-@*                                 <td>@user.UserName</td> *@
-@*                                 <td>@user.Email</td> *@
-@*                                 <td>@user.PhoneNumber</td> *@
-@*                                 <td>@user.HomePhone</td> *@
-@*                                 <td>@user.FirstName</td> *@
-@*                                 <td>@user.MiddleName</td> *@
-@*                                 <td>@user.LastName</td> *@
-@*                                 <td>@user.Gender</td> *@
-@*                                 <td>@user.Address</td> *@
-@*                                 <td>@user.DateOfBirth?.ToString("dd.MM.yyyy")</td> *@
-@*                                 <td>@user.CreatedDateTime?.ToString("dd.MM.yyyy HH:mm")</td> *@
-@*                                 <td>@user.CreatedBy</td> *@
-@*                                 <td>@user.UpdatedDateTime?.ToString("dd.MM.yyyy HH:mm")</td> *@
-@*                                 <td>@user.UpdatedBy</td> *@
-@*                                 <td> *@
-@*                                     <button class="btn btn-sm btn-info" @onclick="() => UpdateUser(user.Id)">Редактировать</button> *@
-@*                                     <button class="btn btn-sm btn-danger" @onclick="() => DeleteUser(user.Id)">Удалить</button> *@
-@*                                 </td> *@
-@*                             </tr> *@
-@*                         } *@
-@*                         </tbody> *@
-@*                     </table> *@
-@*                 </div> *@
-@*             </div> *@
-@*         </div> *@
-@*     </div> *@
-
 
 @code {
     string currentGender = null;
@@ -181,7 +120,7 @@ else
     {
         new { Text = "Мужской", Value = "M" },
         new { Text = "Женский", Value = "F" },
-        new { Text = "Все", Value = default(string) } // null для фильтрации всех значений
+        new { Text = "Все", Value = default(string) }
     };
 
     void OnSelectedGenderChange(object value)
@@ -191,7 +130,7 @@ else
 
 
     private List<User> UsersL;
-
+    
     protected override async Task OnInitializedAsync()
     {
         UsersL = await UserService.GetUsers();
